@@ -120,9 +120,6 @@ class PythonVersionWarning(DeprecatedWarning):
 class DeprecatedSourceCodeWarning(FutureDeprecatedWarning):
     pass
 
-class DeprecatedBuildDirWarning(DeprecatedWarning):
-    pass
-
 class TaskmasterNeedsExecuteWarning(DeprecatedWarning):
     pass
 
@@ -130,12 +127,6 @@ class DeprecatedOptionsWarning(MandatoryDeprecatedWarning):
     pass
 
 class DeprecatedDebugOptionsWarning(MandatoryDeprecatedWarning):
-    pass
-
-class DeprecatedSigModuleWarning(MandatoryDeprecatedWarning):
-    pass
-
-class DeprecatedBuilderKeywordsWarning(MandatoryDeprecatedWarning):
     pass
 
 class DeprecatedMissingSConscriptWarning(DeprecatedWarning):
