@@ -1,0 +1,1 @@
+SConscript('src/SConscript', build_dir='build')
