@@ -1,0 +1,3 @@
+env = Environment(BUILD='build', SRC='src')
+
+env.BuildDir('build', 'src')
